css/grayscale.css
/*!
 * Start Bootstrap - Grayscale v5.0.9 (https://startbootstrap.com/template-overviews/grayscale)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
 */

#mainNav {
  /* min-height: 56px; */
  background-color:  #161616;
  height: 100px;
}

#mainNav .navbar-nav{
  background-color: #16161657;
  border: #ffffe1;
}

#mainNav .navbar-toggler {
  font-size: 70%;
  padding: 0.75rem;
  color: #d57a35;
  border: 1px solid #d57a35;
}

#mainNav .navbar-toggler:focus {
  outline: none;
}

#mainNav .navbar-brand {
  color: #161616;
  font-weight: 700;
  padding: 0rem 0;
  max-width: 50%;
}

#mainNav .navbar-nav .nav-item:hover {
  color: fade(white, 80%);
  outline: none;
  background-color: transparent;
}

#mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
  outline: none;
  background-color: transparent;
}
#mainNav .nav-link {
  color: #ffffe1;
}

#logo {
  vertical-align: top;
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: none;
    background-color: transparent;
    transition: background-color 0.3s ease-in-out;
  }
  #mainNav .navbar-nav{
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    padding: 0rem 0;
    color: rgba(255, 255, 255, 0.5);
    max-height: 100%;
  }
  #mainNav .nav-link {
    transition: none;
    padding: 2rem 1.5rem;
    color: rgba(255, 255, 255, 0.5);
  }
  #mainNav .nav-link:hover {
    color: rgba(255, 255, 255, 0.75);
  }
  #mainNav .nav-link:active {
    color: white;
  }
  #mainNav.navbar-shrink {
    background-color:  #161616;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #161616;
  }
  #mainNav.navbar-shrink .nav-link {
    color: #fff8f8;
    padding: 1.5rem 1.5rem 1.25rem;
    border-bottom: 0.25rem solid transparent;
  }
  #mainNav.navbar-shrink .nav-link:hover {
    color: #d57a35;
  }
  #mainNav.navbar-shrink .nav-link:active {
    color: #b53f21;
  }
  #mainNav.navbar-shrink .nav-link.active {
    color: #d57a35;
    outline: none;
    border-bottom: 0.25rem solid #d57a35;
  }
}

.masthead {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 0;
  background: linear-gradient(to bottom, #d57a35 0%, #b53f21 66%, #6e161c 100%);
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
  margin-top: 100px
}

.masthead h1 {
  font-family: 'Varela Round';
  font-size: 2.5rem;
  line-height: 2.5rem;
  letter-spacing: 0.8rem;
  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.masthead h2 {
  max-width: 20rem;
  font-size: 1rem;
}

#exomy_image{
  padding-top: 10px;
}


@media (min-width: 768px) {
  .masthead h1 {
    font-size: 4rem;
    line-height: 4rem;
  }
}

@media (min-width: 992px) {
  .masthead {
    margin-top: 0rem;
    height: 100vh;
    padding: 0;
  }
  .masthead h1 {
    font-size: 6.5rem;
    line-height: 6.5rem;
    letter-spacing: 0.8rem;
  }
  .masthead h2 {
    max-width: 30rem;
    font-size: 1.25rem;
  }
  #exomy_image{
    padding-top: 100px;
  }
}

.btn {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  font-family: 'Varela Round';
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: .15rem;
  border: 0;
}

.btn-primary {
  background-color: rgba(255, 255, 255, 0.5);
}

.btn-primary:hover {
  background-color: rgba(94, 94, 94, 0.5);
}

.btn-primary:focus {
  background-color: rgba(94, 94, 94, 0.5);
  color: white;
}

.btn-primary:active {
  background-color: rgba(94, 94, 94, 0.5) !important;
}


.about-section {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.about-section p {
  margin-bottom: 5rem;
}

.specifications-section {
  padding: 10rem 0;
}

.features-section {
  padding: 5rem 0;
}

.model-section model-viewer{
  width: 100%;
  height: 60vh;
}

#scrollbar{
  font-size: 1rem;
  background: #161616;
}

#scrollbar h2{
  font-size: 1rem;
}

#scrollbar .fa-4x{
  font-size: 1rem;
} 

.features-section .featured-text {
  padding: 2rem;
}

@media (min-width: 992px) {
  .features-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #d57a35;
  }
}

.features-section .project-text {
  padding: 3rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .features-section .project-text {
    padding: 5rem;
  }
  .features-section .project-text hr {
    border-color: #d57a35;
    border-width: .25rem;
    width: 30%;
  }
}

.contact-section {
  padding: 5rem 0 0;
}

.contact-section .card {
  border: 0;
  border-bottom: 0.25rem solid #d57a35;
}

.contact-section .card h4 {
  font-size: 0.8rem;
  font-family: 'Varela Round';
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}

.contact-section .card hr {
  border-color: #d57a35;
  border-width: 0.25rem;
  width: 3rem;
}

.contact-section .social {
  margin-top: 5rem;
}

.contact-section .social a {
  text-align: center;
  height: 3rem;
  width: 3rem;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 100%;
  line-height: 3rem;
  color: rgba(255, 255, 255, 0.3);
}

.contact-section .social a:hover {
  color: rgba(255, 255, 255, 0.5);
}

.contact-section .social a:active {
  color: #ffffe1;
}

body {
  font-family: 'Nunito';
  letter-spacing: 0.0625em;
  font-size: 25px;
}

a {
  color: #d57a35;
}

a:focus, a:hover {
  text-decoration: none;
  color: #b53f21;
}


.bg-black {
  background-color: #161616 !important;
}

.bg-primary {
  background-color: #ffffe1 !important;
}

.text-primary {
  color: #FFFFE1 !important;
}

.text-secondary{
  color:rgba(94, 94, 94, 0.5) ;
}

.h1 {
  font-size: 10rem;
}

footer {
  padding: 5rem 0;
}

